# polito-programming-techniques-projects

./: CMakeLists.txt  main.c
Labs/Lab00/: Input.txt  L00_Ex01.c  L00_Ex01.h
Lecture-exercises/C-language-in-brief/: Cast-example.c  cast-example-2.c  declaration-c-language-in-brief.h  first-example.c  formatted-input-output-example.c  forth-example.c  function-example.c  input-output-of-characters-examples.c  input-output-of-strings-example.c  second-example.c  third-example.c  visibility-of-variables-example.c
Lecture-exercises/Problem-solving-with-scalar-data/: declaration-problem-solving-with-scalar-data.h
Lecture-exercises/Problem-solving-with-scalar-data/1-II-degree-equation/: solution-version-1-non-nested-if.c  solution-version-1-non-nested-if.h  solution-version-2-nested-if.c  solution-version-2-nested-if.h
Lecture-exercises/Problem-solving-with-scalar-data/10-Visualization-of-a-parabola/: Solution-of-visualization-of-a-parabola.c
Lecture-exercises/Problem-solving-with-scalar-data/11-Text-formating/: Solution-of-text-formating.c  input.txt
Lecture-exercises/Problem-solving-with-scalar-data/12-Monotonicity-of-a-sequence/: Solution-of-monotonicity-of-a-sequence.c
Lecture-exercises/Problem-solving-with-scalar-data/12-Verify-alphabetical-order/: Solution-of-verify-alphabetical-order.c
Lecture-exercises/Problem-solving-with-scalar-data/2-Area-of-a-right-triangle/: solution-version-1-3if-6comparisons.c  solution-version-1-3if-6comparisons.h  solution-version-2-3if-3comparisons.c  solution-version-2-3if-3comparisons.h
Lecture-exercises/Problem-solving-with-scalar-data/3-N-th-reduced-of-harmonic-series/: solution-n-th-reduced-of-harmonic-series.c  solution-n-th-reduced-of-harmonic-series.h
Lecture-exercises/Problem-solving-with-scalar-data/4-Pure-binary-encoding-of-an-integer-positive-number/: complete-solution-main-with-function-binary.c  complete-solution-main-with-function-binary.h
Lecture-exercises/Problem-solving-with-scalar-data/5-Conversion-between-bases/: Solution-of-conversion-between-bases.c  Solution-of-conversion-between-bases.h
Lecture-exercises/Problem-solving-with-scalar-data/6-Simple-encryption/: Solution-of-simple-encryprion.c  Solution-of-simple-encryprion.h
Lecture-exercises/Problem-solving-with-scalar-data/7-Menu-with-characters-as-selectors/: Solution-of-menu-with-characters-as-selctors.c  Solution-of-menu-with-characters-as-selctors.h
Lecture-exercises/Problem-solving-with-scalar-data/8-Menu-with-words-as-selectors/: Solution-of-menu-with-words-as-selectors.c
Lecture-exercises/Problem-solving-with-scalar-data/9-Visualization-of-a-rectangle/: Solution-of-visualization-of-a-rectangle.c
