cmake_minimum_required(VERSION 3.27)
project(polito_programming_techniques_projects C)

set(CMAKE_C_STANDARD 99)

add_executable(polito_programming_techniques_projects main.c
        Lecture-exercises/C-language-in-brief/first-example.c
        Lecture-exercises/C-language-in-brief/second-example.c)
